just adding images

--- a/TopTen.html
+++ b/TopTen.html
@@ -18,70 +18,70 @@
                 <td class="pos">Frontend Developer</td>
                 <td class="des">Create appealing website designs for fans and customers to be able to interact with.</td>
                 <td class="com">Mr.Beast</td>
-                <td class="img">Img</td>
+                <td class="img"><img src="images/mrBeastLogo.png"></td>
             </tr>
             <tr>
                 <td class="num">2.)</td>
                 <td class="pos">Software Engineer</td>
                 <td class="des">Create the next generation of technology by expanding how users interact, explore and connect in today's world.</td>
                 <td class="com">Google</td>
-                <td class="img">Img</td>
+                <td class="img"><img src="images/googleLogo.png"></td>
             </tr>
             <tr>
                 <td class="num">3.)</td>
                 <td class="pos">Cybersecurity Threat Analyst</td>
                 <td class="des">Monitor and analyze possible threats to create intelligence in the forms of reports</td>
                 <td class="com">CIA/FBI</td>
-                <td class="img">Img</td>
+                <td class="img"><img src="images/CIALogo.jfif"></td>
             </tr>
             <tr>
                 <td class="num">4.)</td>
                 <td class="pos">Digital forensics investigator</td>
                 <td class="des">collect information from computers and other technologies to connect to physical forensics</td>
                 <td class="com">US Department of Treasury</td>
-                <td class="img">Img</td>
+                <td class="img"><img src="images/DOTLogo.png"></td>
             </tr>
             <tr>
                 <td class="num">5.)</td>
                 <td class="pos">Team Member</td>
                 <td class="des">Work together to cook and create an amzing experience for customers</td>
                 <td class="com">Mcdonald's</td>
-                <td class="img">Img</td>
+                <td class="img"><img src="images/mcdonaldsLogo.png"></td>
             </tr>
             <tr>
                 <td class="num">6.)</td>
-                <td class="pos">position</td>
-                <td class="des">description</td>
-                <td class="com">company</td>
-                <td class="img">Img</td>
+                <td class="pos">Hotdogger</td>
+                <td class="des">Drive the famous Oscar Mayer hot dog mobile, and give tours to customers </td>
+                <td class="com">Oscar Mayer</td>
+                <td class="img"><img src="images/oscarMayerIMG.png"></td>
             </tr>
             <tr>
                 <td class="num">7.)</td>
-                <td class="pos">position</td>
+                <td class="pos">Ethical Hacker</td>
                 <td class="des">description</td>
-                <td class="com">company</td>
-                <td class="img">Img</td>
+                <td class="com">Bank Of America</td>
+                <td class="img"><img src="images/BankOfAmericaLogo.png"></td>
             </tr>
             <tr>
                 <td class="num">8.)</td>
-                <td class="pos">position</td>
-                <td class="des">description</td>
-                <td class="com">company</td>
-                <td class="img">Img</td>
+                <td class="pos">Unethical Hacker</td>
+                <td class="des">Unethically hack my way into success and richness</td>
+                <td class="com">Self-employed</td>
+                <td class="img"><img src="images/unethicalHacker.png"></td>
             </tr>
             <tr>
                 <td class="num">9.)</td>
                 <td class="pos">position</td>
                 <td class="des">description</td>
                 <td class="com">company</td>
-                <td class="img">Img</td>
+                <td class="img"><img></td>
             </tr>
             <tr>
                 <td class="num">10.)</td>
                 <td class="pos">position</td>
                 <td class="des">description</td>
                 <td class="com">company</td>
-                <td class="img">Img</td>
+                <td class="img"><img></td>
             </tr>
         </table>
     </body>
@@ -92,6 +92,7 @@
         }
         td {
             width: 15%;
+            font-size: x-large;
         }
 
         .num {
@@ -102,6 +103,11 @@
         .pos,.com,.img {
             width:10%;
             text-align: center;
+        }
+
+        img {
+            width:225px;
+            height:225px;
         }
 
         .des {
