just making my css

--- a/TopTen.html
+++ b/TopTen.html
@@ -3,6 +3,7 @@
     <head>
         <title>Top Ten Jobs</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <table>
@@ -85,33 +86,4 @@
             </tr>
         </table>
     </body>
-    <style>
-        table,td {
-            border: 2px solid black;
-            padding:10px;
-        }
-        td {
-            width: 15%;
-            font-size: x-large;
-        }
-
-        .num {
-            width:2%;
-            text-align: center;
-        }
-
-        .pos,.com,.img {
-            width:10%;
-            text-align: center;
-        }
-
-        img {
-            width:225px;
-            height:225px;
-        }
-
-        .des {
-            width:25%;
-        }
-    </style>
 </html>
