finished top ten

--- a/TopTen.html
+++ b/TopTen.html
@@ -12,7 +12,7 @@
                 <th>position</th>
                 <th>description</th>
                 <th>company</th>
-                <th>Img</th>
+                <th>Image</th>
             </tr>
             <tr>
                 <td class="num">1.)</td>
@@ -72,17 +72,17 @@
             </tr>
             <tr>
                 <td class="num">9.)</td>
-                <td class="pos">position</td>
-                <td class="des">description</td>
-                <td class="com">company</td>
-                <td class="img"><img></td>
+                <td class="pos">Housewife</td>
+                <td class="des">Stay home, cook, clean, and craft, sounds like a good time</td>
+                <td class="com">Self-employed</td>
+                <td class="img"><img src="images/housewifeIMG.jpg"></td>
             </tr>
             <tr>
                 <td class="num">10.)</td>
-                <td class="pos">position</td>
-                <td class="des">description</td>
-                <td class="com">company</td>
-                <td class="img"><img></td>
+                <td class="pos">Computer and Information Systems Manager</td>
+                <td class="des">Plan, coordinate and direct computer-related activities within the company</td>
+                <td class="com">Walgreens</td>
+                <td class="img"><img src="images/walgreensLogo.png"></td>
             </tr>
         </table>
     </body>
