finished top ten

--- a/TopTen.html
+++ b/TopTen.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <table>
+        <table border="2px">
             <tr>
                 <th>number</th>
                 <th>position</th>
@@ -59,7 +59,7 @@
             <tr>
                 <td class="num">7.)</td>
                 <td class="pos">Ethical Hacker</td>
-                <td class="des">description</td>
+                <td class="des">Ethically hack to keep accounts and information secured</td>
                 <td class="com">Bank Of America</td>
                 <td class="img"><img src="images/BankOfAmericaLogo.png"></td>
             </tr>
